# booleanfix

./: .gitignore  README.md  pyproject.toml  setup.py  techstack.md  techstack.yml
booleanfix/: __init__.py
booleanfix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_booleanfix.py
