[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "booleanfix"
version = "1.1.0"
authors = [
  { name="EDM115", email="dev@edm115.eu.org" },
]
description = "Fix for boolean variables in Python"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["boolean", "fix", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/EDM115/booleanfix"
"Bug Tracker" = "https://github.com/EDM115/booleanfix/issues"
"Funding" = "https://github.com/EDM115#support-me-"